APF-1983 Fix Botflow objects and actions.